<resources>
    <string name="app_name">PrzeTerminarz</string>

    <string name="categoryLabel">Kategoria</string>

    <string name="category_label">Kategorie</string>
    <string name="status_label">Termin ważności</string>

    <string name="grocery">Spożywcze</string>
    <string name="medicine">Lekarstwa</string>
    <string name="cosmetics">Kosmetyki</string>
    <string name="all">Wszystkie</string>
    <string name="valid">Ważne</string>
    <string name="expired">Po terminie</string>

    <string name="contentDescription">Opis</string>

    <string name="expirationDateLabel">Data ważności</string>
    <string name="isValidLabel">Czy ważna</string>"

    <string name="no">Nie</string>
    <string name="yes">Tak</string>

    <string name="manage_goods_title_label">Dodaj nowy produkt</string>
    <string name="manage_goods_name_label">Nazwa produktu</string>
    <string name="manage_goods_category_label">Kategoria</string>
    <string name="manage_goods_quantity_label">Ilość</string>
    <string name="manage_goods_pick_image_label">Wybierz zdjęcie</string>
    <string name="manage_goods_button_add_goods_label">Dodaj</string>
    <string name="manage_goods_button_edit_goods_label">Edytuj</string>
    <string name="goods_counter_label">Ilość produktów na liście %d</string>
    <string name="goods_expired_toast">Towar %s jest przeterminowany i nie można go edytować</string>
    <string name="invalid_date_toast">Wybrana data nie może być wcześniejsza niż obecna</string>
    <string name="goods_marked_as_thrown_away">Produkt %s został wyrzucony</string>
    <string name="goods_is_thrown_away">Produkt %s jest wyrzucony</string>
    <string name="goods_dialog_confirm_delete_title">Usuwanie %s!</string>
    <string name="goods_dialog_confirm_delete_message">Czy chcesz usunąć %s?</string>
    <string name="goods_dialog_confirm_delete_positive">Tak</string>
    <string name="goods_dialog_confirm_delete_negative">Nie</string>
    <string name="goods_deleted">Produkt %s został usunięty</string>
    <string name="goods_not_deleted">Produkt %s pozostał na liście</string>
    <string name="goods_already_thrown_away">Produkt %s jest już wyrzucony</string>

    <string name="invalid_input_toast">Błędne dane</string>
    <string name="success_toast">Dane zapisane</string>
    <string name="manage_goods_goods_name_label">Nazwa</string>
    <string name="manage_goods_goods_name_value_hint">Nazwa produktu</string>
    <string name="manage_goods_category">Kategoria</string>
    <string name="manage_goods_quantity_label_text">Ilość</string>
    <string name="manage_goods_quantity_value_hint">Ilość produktu</string>
    <string name="manage_goods_expiration_date_label_text">Data ważności</string>
    <string name="manage_goods_expiration_date_value_hint">Wybierz datę</string>
    <string name="manage_goods_image_label_text">Obraz</string>
    <string name="goods_counter_label_text">Ilość produktów</string>
</resources>