<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_goods_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.GoodsListFragment">

        <LinearLayout
            android:id="@+id/filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/filter_layout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/category_label"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/category_filter_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:checkedChip="@id/category_all"
                app:chipSpacingHorizontal="8dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/category_all"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/category_food"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grocery" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/category_medicine"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/category_cosmetics"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cosmetics" />
            </com.google.android.material.chip.ChipGroup>

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/filter_layout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/status_label"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/status_filter_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@id/status_all"
                app:chipSpacingHorizontal="8dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/status_all"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/all" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/status_valid"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valid" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/status_expired"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expired" />

            </com.google.android.material.chip.ChipGroup>

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/filter_layout" />

        </LinearLayout>

        <TextView
            android:id="@+id/goods_counter_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="Ilość produktów"
            app:layout_constraintBottom_toTopOf="@id/goods_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_layout" />

        <View
            android:id="@+id/separator4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/goods_recycler_view" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/goods_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goods_counter_label"
            tools:listitem="@layout/goods_item_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_new_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>